# -ai

./: .gitignore  README.md  README_standalone.md  analyze_excel.py  analyze_excel_pandas.py  detailed_excel_analysis.py  force_stay_open.bat  install_and_run.bat  launcher.py  package_app.py  package_ascii.py  package_debug.py  package_simple.py  package_standalone.py  package_super_debug.py  run_debug.bat  run_windows_ansi.bat  simple_run.bat  standalone.spec  standalone_app.py  super_debug.bat  test_api_workflow.py  test_llm_integration.py
backend/: pyproject.toml
backend/app/: excel_service.py  llm_service.py  main.py  models.py  vba_service.py
docs/: excel_analysis.md  implementation_summary.md  llm_integration.md  test_success_criteria.md  vba_generation.md
essential_files/: README.md  README_windows.md  launcher.py  run_simple.bat  run_windows.bat  start_windows.bat
essential_files/backend/: requirements.txt
essential_files/backend/static/: index.html
essential_files/backend/static/assets/: index-BrTYYk4E.css  index-YjGIdI2u.js
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  FileUpload.tsx  ProjectForm.tsx  VBACodeDisplay.tsx
frontend/src/types/: index.ts
